# lunar-seismic-fno

./: .gitignore  CITATION.cff  README.md  pyproject.toml  release_check.sh  requirements.txt
configs/: spectrogram_default.yaml  waveform_default.yaml
docs/: data_contract.md  project_structure.md  reproducibility.md
expected_results/: early_stopping_summary.csv  spectrogram_seed_metrics.csv  waveform_seed_metrics.csv
scripts/: run_spectrogram.sh  run_waveform.sh
src/lunar_fno/: __init__.py
src/lunar_fno/data/: spectrogram_dataset.py  waveform_dataset.py
src/lunar_fno/models/: fno1d.py  fno2d.py
src/lunar_fno/train/: train_spectrogram.py  train_waveform.py
src/lunar_fno/utils/: io_contracts.py  metrics.py  reproducibility.py
